# mycraft

./: .clang-format  .gitignore  CMakeLists.txt  ISSUES  Makefile  README.md  block.hpp  block_library.cpp  block_library.hpp  build.sh  camera.cpp  camera.hpp  chunk-fragment.glsl  chunk-vertex.glsl  chunk.cpp  chunk.hpp  chunk_manager.cpp  chunk_manager.hpp  coordinate.hpp  cube.cpp  cube.hpp  floating-fragment.glsl  floating-vertex.glsl  format.sh  fragment.glsl  mesh.cpp  mesh.hpp  mycraft.cpp  mycraft.sublime-project  mycraft.sublime-workspace  noise.hpp  perlin_noise.cpp  player.cpp  player.hpp  ray_caster.cpp  ray_caster.hpp  renderer.cpp  renderer.hpp  shaders.cpp  shaders.hpp  (+7 more)
doc/: IDEAS
h/: block.hpp  block_library.hpp  camera.hpp  chunk.hpp  chunk_manager.hpp  coordinate.hpp  cube.hpp  exceptions.hpp  mesh.hpp  perlin_noise.hpp  player.hpp  ray_caster.hpp  renderer.hpp  textures.hpp
shaders/: floating-fragment.glsl
src/: block_library.cpp  camera.cpp  chunk.cpp  chunk_manager.cpp  coordinate.cpp  cube.cpp  mesh.cpp  mycraft.cpp  perlin_noise.cpp  player.cpp  ray_caster.cpp  renderer.cpp  shaders.cpp  textures.cpp
